--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 
 .card:hover {
     transform: translateY(-5px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 10px 20px rgba(96, 155, 243, 0.15);
 }
 
 /* Media Query para pantallas pequeñas */
@@ -31,6 +31,6 @@
     }
 
     .navbar {
-        background-color: #333 !important;
+        background-color: #48e66a !important;
     }
 }
